fix: изменена логика получения заданий, сваггер сделан публичным
