# docs/openapi.yaml
@@ -596,29 +596,34 @@ paths:
       - Progress Controller
   /tasks:
     get:
-      summary: Список всех заданий
+      parameters:
+      - name: trainer_id
+        in: query
+        schema:
+          type: integer
+          format: int64
       responses:
         "200":
           description: OK
           content:
             application/json:
               schema: {}
+      summary: Get Tasks
       tags:
       - Tasks Controller
   /tasks/random:
     get:
-      summary: Получение деталей случайной задачи
       responses:
         "200":
           description: OK
           content:
             application/json:
               schema: {}
+      summary: Get Random Task
       tags:
       - Tasks Controller
   /tasks/{id}:
     get:
-      summary: Получение деталей задачи по id
       parameters:
       - name: id
         in: path
@@ -632,6 +637,7 @@ paths:
           content:
             application/json:
               schema: {}
+      summary: Get Task Details
       tags:
       - Tasks Controller
   /trainers:
