# src/main/java/com/example/tasks/domain/model/TaskResponse.java
@@ -1,20 +1,0 @@
-package com.example.tasks.domain.model;
-
-import com.example.jooq.generated.enums.TaskTypeEnum;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import jakarta.annotation.Nonnull;
-import lombok.Builder;
-
-@Builder
-public record TaskResponse(
-
-        @Nonnull Long id,
-
-        @Nonnull
-        @JsonProperty(value = "trainer_id", required = true)
-        Long trainerId,
-
-        @Nonnull TaskTypeEnum type,
-
-        @Nonnull String title
-) {}
